Simple Decision Tree Test working

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@
 ################################################################################
 
 /.vs
-/SomeDemos/.vs/SomeDemos
+/SomeDemos/.vs/SomeDemos/v15
